--- a/style.css
+++ b/style.css
@@ -74,13 +74,25 @@ h1{
   line-height:1.5;
   padding: 3% 15%;
 }
+
+#thumbnail{
+  padding: 3% 15%;
+  background-color: #98907d;
+  font-family: 'Share Tech Mono', monospace;
+  z-index: -2;
+}
+  
+div.card{
+  background-color: #98907d;
+  text-align: center;
+}
+
 #mission{
   font-family: 'Share Tech Mono', monospace;
   background-color: #98907d;
   z-index: -2;
   font-family: 'Orelega One';
   size: 5rem;
-  
   padding: 3% 15%;
 }
 #Education{
@@ -108,6 +120,24 @@ h1{
   color: #000000;
   text-align: left;
 }
+#Skills{
+  font-family: 'Share Tech Mono', monospace;
+  size: 5rem;
+  background-color: #98907d;
+  text-align: center;
+  padding: 3% 15%;
+  color: #000000;
+
+}
+
+#Action{
+  font-family: 'Share Tech Mono', monospace;
+  size: 5rem;
+  background-color: #98907d;
+  text-align: center;
+  padding: 10% 20%;
+  color: #000000;
+}
 #footer {
   text-align: center;
   z-index: 1;
@@ -118,8 +148,28 @@ h1{
   
 }
 
+h6{
+padding-bottom: 6%;
+}
 .col-sm{
   font-family: 'Share Tech Mono', monospace;
   padding: 3% 15%;
   line-height:2;
+}
+
+div.card{
+  background-color: #cd4467;
+  color: white;
+  opacity: 0.3;
+}
+.card:hover{
+  filter: alpha(opacity=30);
+  opacity: 1;
+}
+.img{
+  border: 1px solid #000000;
+}
+button.btn{
+  padding: 0 0 0 0px;
+  text-align: center;
 }
